--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -12,8 +12,6 @@
 }
 .table {
     width: 1080px;
-
-
 }
 
 .table table {
@@ -27,20 +25,39 @@
     height: 54px;
 }
 
+.thead {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.arrow {
+    background: url('../assets/arrowDown.svg'); 
+    width: 12px;
+    height: 12px;;
+    fill: white;
+    margin-left: 40px;
+}
+
 .tdRow  {
     height: 54px;
-
 }
 
 td {
     border: 1px solid #E3E6EC;
-    text-align: center;
+    text-align: left;
     font-size: 13px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .col1 {
-    width: 114px;;
+    width: 114px;
+}
+
+.tdId {
+    text-align: center;
 }
 
 .col2 {
@@ -60,6 +77,8 @@ td {
     padding: 15px;
     padding-left: 45px;
     padding-right: 45px;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .pagination {
@@ -67,4 +86,41 @@ td {
     font-weight: 700;
     font-size: 18px;
     font-style: italic;
+    text-decoration: none;
+    color: #474955;
+}
+
+.currentPage {
+    color: #7EBC3C;
+    cursor: pointer;
+}
+
+.searchBar {
+    box-sizing: border-box;
+    width: 631px;
+    height: 52px;
+    margin: 15px;
+    margin-left: 0;
+    background: #5A5C66;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+.searchBarInput {
+    width: 100%;
+    height: 100%;
+    border: none;
+    color: white;
+    outline: none;
+    background: #5A5C66;
+}
+
+.searchBar ::placeholder {
+    color: white;
+}
+
+.searchLogo {
+    cursor: pointer;
 }
